{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 20,
  "lineage": "18fbfa42-679b-1b65-dd45-7a890803f1f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056431de131ab45a6",
            "arn": "arn:aws:ec2:us-west-2:687396660194:elastic-ip/eipalloc-056431de131ab45a6",
            "association_id": "eipassoc-0b66c00f996622c56",
            "domain": "vpc",
            "id": "eipalloc-056431de131ab45a6",
            "network_border_group": "us-west-2",
            "network_interface": "eni-070d5ca2c3d3b836d",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-52-88-189-154.us-west-2.compute.amazonaws.com",
            "public_ip": "52.88.189.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f49405a1c2dc395e",
            "arn": "arn:aws:ec2:us-west-2:687396660194:elastic-ip/eipalloc-0f49405a1c2dc395e",
            "domain": "vpc",
            "id": "eipalloc-0f49405a1c2dc395e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-188-103-56.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.103.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:internet-gateway/igw-0d932621e0931d3fc",
            "id": "igw-0d932621e0931d3fc",
            "owner_id": "687396660194",
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056431de131ab45a6",
            "association_id": "eipassoc-0b66c00f996622c56",
            "connectivity_type": "public",
            "id": "nat-0bc76884030bae6c9",
            "network_interface_id": "eni-070d5ca2c3d3b836d",
            "private_ip": "10.0.1.98",
            "public_ip": "52.88.189.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09228574e7de85f9f"
          },
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f49405a1c2dc395e",
            "association_id": "eipassoc-03fdc25f1ce19dace",
            "connectivity_type": "public",
            "id": "nat-05e96e6a42c26cc4b",
            "network_interface_id": "eni-0d3b0a3eeba6140fe",
            "private_ip": "10.0.2.234",
            "public_ip": "54.188.103.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edaf5ca32ec7d781"
          },
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:route-table/rtb-082c83fe00e1a056d",
            "id": "rtb-082c83fe00e1a056d",
            "owner_id": "687396660194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc76884030bae6c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_nat_gateway.nat_gw_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_private_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:route-table/rtb-0436ef8799e927f4d",
            "id": "rtb-0436ef8799e927f4d",
            "owner_id": "687396660194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e96e6a42c26cc4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_nat_gateway.nat_gw_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:route-table/rtb-03efed83c581d5725",
            "id": "rtb-03efed83c581d5725",
            "owner_id": "687396660194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d932621e0931d3fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cb4177717833e67",
            "route_table_id": "rtb-03efed83c581d5725",
            "subnet_id": "subnet-0edaf5ca32ec7d781"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cb4177717833e67",
            "route_table_id": "rtb-03efed83c581d5725",
            "subnet_id": "subnet-0edaf5ca32ec7d781"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccdd1ec067b1a037",
            "route_table_id": "rtb-082c83fe00e1a056d",
            "subnet_id": "subnet-079944bc403791c4d"
          },
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.aws_private_rt_a",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0784e34f3182df478",
            "route_table_id": "rtb-0436ef8799e927f4d",
            "subnet_id": "subnet-0a235dbed73c16718"
          },
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_nat_gateway.nat_gw_b",
            "aws_route_table.aws_private_rt_b",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:subnet/subnet-079944bc403791c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079944bc403791c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687396660194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:subnet/subnet-0a235dbed73c16718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a235dbed73c16718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687396660194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:subnet/subnet-09228574e7de85f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09228574e7de85f9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "687396660194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:subnet/subnet-0edaf5ca32ec7d781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edaf5ca32ec7d781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "687396660194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c905658b08507dad"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:687396660194:vpc/vpc-0c905658b08507dad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03afb7289083c86a7",
            "default_route_table_id": "rtb-0c54765cdcb1ecf18",
            "default_security_group_id": "sg-0ba49b42cd3f931e7",
            "dhcp_options_id": "dopt-0cfdcdd47122e6aef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c905658b08507dad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c54765cdcb1ecf18",
            "owner_id": "687396660194"
          }
        }
      ]
    }
  ]
}